fix(svelte): css spinner alignment fixed

--- a/site/src/styles/stageIcon.scss
+++ b/site/src/styles/stageIcon.scss
@@ -14,11 +14,13 @@
     }
 
     :global(.spinner-wrap) {
-        transform: scale(0.4) translate(-50%, -50%);
-        position: absolute;
-        left: -25%;
-        top: -4px;
         color: #96b4fd;
+        transform: scale(0.3);
+        transform-origin: 0 0;
+    }
+
+    :global(.spinner-wrap > div) {
+        transform: scale(1.3);
     }
 
     &:hover :global(svg) {
